--- a/RoadHantei_step2.html
+++ b/RoadHantei_step2.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/favicon.png" />
     <script src="js/jquery-3.6.0.min.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="assets/libs/DataTables/jquery.dataTables.min.css"> -->
 
     <link href="css/main.css" rel="stylesheet">
   </head>
@@ -64,9 +63,9 @@
 
               <div class="steps ms-auto me-auto me-md-0">
                 <ul>
-                  <li class="first done"><a href="RoadHantei_step1.html"><span class="number">1</span> 幅員を測定</a></li>
+                  <li class="first done"><a href="bukken-input.html#RoadHantei1_Modal"><span class="number">1</span> 幅員を測定</a></li>
                   <li class="current"><a href="RoadHantei_step2.html"><span class="number">2</span> 項目を入力</a></li>
-                  <li class="disabled last"><a href="RoadHantei_step3.html"><span class="number">3</span> 測定完了</a></li>
+                  <li class="disabled last"><a href="bukken-input.html#RoadHantei3_Modal"><span class="number">3</span> 測定完了</a></li>
               </div>
             </div>
             <hr>
@@ -116,7 +115,7 @@
                 </li>
                 <li class="d-sm-flex">
                   <div class="-li-w220 bmodal__list__lable">名称</div>
-                  <div><input type="text" class="form-control w-auto"></div>
+                  <div><input type="text" class="form-control w-100 w-sm-auto"></div>
                 </li>
                 <li class="d-sm-flex">
                   <div class="-li-w220 bmodal__list__lable">セットバック</div>
