--- a/bukken-detail.html
+++ b/bukken-detail.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/favicon.png" />
     <script src="js/jquery-3.6.0.min.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="assets/libs/DataTables/jquery.dataTables.min.css"> -->
 
     <link href="css/main.css" rel="stylesheet">
   </head>
@@ -263,7 +262,7 @@
                         <div class="d-sm-flex">
                           <p class="w120px d-none d-sm-block">接面道路区分①</p>
                           <div class="flex-grow-1">
-                              <div class="box__toggle  mb-4">
+                              <div class="box__toggle">
                                 <div class="box__toggle__header d-flex">
                                   <div class="pt-0"><span class="d-sm-none">接面道路区分①</span><span class="d-none d-sm-block">前面道路</span></div>
                                   <div class="pt-0 ms-auto"><span class="d-sm-none">前面道路</span> <i class="icon-arrow-up d-inline-block"></i></div>
@@ -310,11 +309,11 @@
 
                           </div>
                         </div>
-                        <hr>
+                        <hr class="mt-0">
                         <div class="d-sm-flex">
                           <p class="w120px d-none d-sm-block">接面道路区分②</p>
                           <div class="flex-grow-1">
-                            <div class="box__toggle active mb-4">
+                            <div class="box__toggle active">
                               <div class="box__toggle__header d-flex">
                                 <div class="pt-0"><span class="d-sm-none">接面道路区分②</span><span class="d-none d-sm-block">背面道路</span></div>
                                 <div class="pt-0 ms-auto"><span class="d-sm-none">背面道路</span> <i class="icon-arrow-up d-inline-block"></i></div>
@@ -372,7 +371,7 @@
                         <div class="d-sm-flex">
                           <p class="w120px d-none d-sm-block">交通／接近条件①</p>
                           <div class="flex-grow-1">
-                            <div class="box__toggle mb-4">
+                            <div class="box__toggle">
                               <div class="box__toggle__header d-flex">
                                 <div class="pt-0"><span class="d-sm-none">交通／接近条件①</span><span class="d-none d-sm-block">駅</span></div>
                                 <div class="pt-0 ms-auto"><span class="d-sm-none">駅</span> <i class="icon-arrow-up d-inline-block"></i></div>
@@ -407,11 +406,11 @@
 
                           </div>
                         </div>
-                        <hr>
+                        <hr class="mt-0">
                         <div class="d-sm-flex">
                           <p class="w120px d-none d-sm-block">交通／接近条件②</p>
                           <div class="flex-grow-1">
-                            <div class="box__toggle active mb-4">
+                            <div class="box__toggle active">
                               <div class="box__toggle__header d-flex">
                                 <div class="pt-0"><span class="d-sm-none">交通／接近条件②</span><span class="d-none d-sm-block">バス停</span></div>
                                 <div class="pt-0 ms-auto"><span class="d-sm-none">バス停</span> <i class="icon-arrow-up d-inline-block"></i></div>
@@ -472,7 +471,7 @@
                           <p class="w120px">東</p>
                           <p class="flex-grow-1 text-end text-sm-start">40.00m</p>
                         </div>
-                        <hr class="d-none d-sm-block">
+
                       </div>
                     </div> <!-- .row -->
                     <hr class="d-none d-sm-block">
@@ -972,8 +971,6 @@
 
     </div> <!-- .wrapper -->
     <script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- <script type="text/javascript" charset="utf8" src="libs/DataTables/jquery.dataTables.min.js"></script> -->
-    <!-- <script type="text/javascript" charset="utf8" src="libs/DataTables/dataTables.bootstrap5.min.js"></script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
