--- a/user-info.html
+++ b/user-info.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/favicon.png" />
     <script src="js/jquery-3.6.0.min.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="assets/libs/DataTables/jquery.dataTables.min.css"> -->
 
     <link href="css/main.css" rel="stylesheet">
   </head>
@@ -158,7 +157,7 @@
                       <table id="table_userinfo" class="table pt-1">
                         <thead>
                           <tr>
-                            <th><div class="d-flex align-items-center">日付</div></th>
+                            <th class="sorting sorting_desc"><div class="d-flex align-items-center">日付<span class="sort-icon"></span></div></th>
                             <th class="no-sort">項目</th>
                             <th class="no-sort text-end">金額</th>
                           </tr>
@@ -223,8 +222,6 @@
 
     </div> <!-- .wrapper -->
     <script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- <script type="text/javascript" charset="utf8" src="assets/libs/DataTables/jquery.dataTables.min.js"></script> -->
-    <!-- <script type="text/javascript" charset="utf8" src="assets/libs/DataTables/dataTables.bootstrap5.min.js"></script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
