--- a/RoadHantei_step2.html
+++ b/RoadHantei_step2.html
@@ -56,9 +56,9 @@
           </div>
         </div>
 
-        <div class="sc__content">
+        <div class="sc__content -modal-step">
 
-            <div class="sc__box__header -small d-flex align-items-center pt-0 pt-xl-5 p-0">
+            <div class="sc__box__header -small d-flex align-items-center pt-xl-5 pe-0 pb-0">
               <h4 class="sc__box__title d-none d-md-flex align-items-center"><i class="ic-duong"></i>街路条件判定／幅員測定</h4>
 
               <div class="steps ms-auto me-auto me-md-0">
@@ -68,7 +68,7 @@
                   <li class="disabled last"><a href="bukken-input.html#RoadHantei3_Modal"><span class="number">3</span> 測定完了</a></li>
               </div>
             </div>
-            <hr>
+            <hr class="mb-2">
 
             <div class="bmodal__list">
               <ul class="mb-5 text-center text-sm-start">
@@ -177,7 +177,7 @@
             <button type="button" class="" data-bs-dismiss="modal" aria-label="Close"><i class="icon-angle-right rotate-180"></i> 戻る</button>
           </li>
           <li class="col-6 -right">
-            <button type="button" class="active">特定する <i class="ic-plus-circle-white -plus"></i></button>
+            <button type="button" class="active">確認する <i class="ic-plus-circle-white -plus"></i></button>
           </li>
         </ul>
       </div>
