--- a/bukken-detail.html
+++ b/bukken-detail.html
@@ -60,7 +60,7 @@
 
           <div class="sc__box mb-4">
             <div class="sc__box__header -small d-flex align-items-center">
-              <h4 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>新規物件登録</h4>
+              <h4 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>物件詳細</h4>
             </div>
             <div class="accordion -detail" id="accordionBukken">
               <div class="accordion-item">
@@ -208,12 +208,12 @@
                       <div class="col-sm-20 d-none d-sm-block"><div class="el__label">間口／奥行き</div></div>
                       <div class="col-sm-80">
                         <div class="d-sm-flex">
-                          <p class="w120px el__label">間口</p>
+                          <p class="w130px el__label">間口</p>
                           <p class="flex-grow-1 el__value">15.30㎡</p>
                         </div>
                         <hr class="d-none d-sm-block">
                         <div class="d-sm-flex">
-                          <p class="w120px el__label">奥行き</p>
+                          <p class="w130px el__label">奥行き</p>
                           <p class="flex-grow-1 el__value">18.50㎡</p>
                         </div>
                       </div>
@@ -223,7 +223,7 @@
                       <div class="col-sm-20 d-none d-sm-block"><div class="el__label">標高測定</div></div>
                       <div class="col-sm-80">
                         <div class="d-sm-flex">
-                          <p class="w120px el__label">標高</p>
+                          <p class="w130px el__label">標高</p>
                           <p class="flex-grow-1 el__value">2.30㎡</p>
                         </div>
                       </div>
@@ -233,17 +233,17 @@
                       <div class="col-sm-20 mb-3 mb-sm-0"><div class="el__label">形状判定・陰地割合測定</div></div>
                       <div class="col-sm-80">
                         <div class="d-flex">
-                          <p class="w120px">整形地面積</p>
+                          <p class="w130px">整形地面積</p>
                           <p class="flex-grow-1 ms-auto ms-sm-0 text-end text-sm-start">120.0㎡</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">陰地割合</p>
+                          <p class="w130px">陰地割合</p>
                           <p class="flex-grow-1 ms-auto ms-sm-0 text-end text-sm-start">83%</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">形状判定</p>
+                          <p class="w130px">形状判定</p>
                           <p class="flex-grow-1 ms-auto ms-sm-0 text-end text-sm-start">不整形</p>
                         </div>
                       </div>
@@ -254,13 +254,13 @@
                       <div class="col-sm-80">
 
                         <div class="d-flex">
-                          <p class="w120px">接面状況区分</p>
+                          <p class="w130px">接面状況区分</p>
                           <p class="flex-grow-1 ms-auto ms-sm-0 text-end text-sm-start">二方路</p>
                         </div>
                         <hr>
 
                         <div class="d-sm-flex">
-                          <p class="w120px d-none d-sm-block">接面道路区分①</p>
+                          <p class="w130px d-none d-sm-block">接面道路区分①</p>
                           <div class="flex-grow-1">
                               <div class="box__toggle">
                                 <div class="box__toggle__header d-flex">
@@ -278,7 +278,7 @@
                                   </li>
                                   <li class="d-flex">
                                     <div>名称</div>
-                                    <div class="ms-auto text-end">—</div>
+                                    <div class="ms-auto text-end">ー</div>
                                   </li>
                                   <li class="d-flex">
                                     <div>建築基準法上の区分</div>
@@ -311,7 +311,7 @@
                         </div>
                         <hr class="mt-0">
                         <div class="d-sm-flex">
-                          <p class="w120px d-none d-sm-block">接面道路区分②</p>
+                          <p class="w130px d-none d-sm-block">接面道路区分②</p>
                           <div class="flex-grow-1">
                             <div class="box__toggle active">
                               <div class="box__toggle__header d-flex">
@@ -369,7 +369,7 @@
                       <div class="col-sm-80">
 
                         <div class="d-sm-flex">
-                          <p class="w120px d-none d-sm-block">交通／接近条件①</p>
+                          <p class="w130px d-none d-sm-block">交通／接近条件①</p>
                           <div class="flex-grow-1">
                             <div class="box__toggle">
                               <div class="box__toggle__header d-flex">
@@ -408,7 +408,7 @@
                         </div>
                         <hr class="mt-0">
                         <div class="d-sm-flex">
-                          <p class="w120px d-none d-sm-block">交通／接近条件②</p>
+                          <p class="w130px d-none d-sm-block">交通／接近条件②</p>
                           <div class="flex-grow-1">
                             <div class="box__toggle active">
                               <div class="box__toggle__header d-flex">
@@ -453,22 +453,22 @@
                       <div class="col-sm-20 mb-3 mb-sm-0"><div class="el__label">近隣地域判定</div></div>
                       <div class="col-sm-80">
                         <div class="d-flex">
-                          <p class="w120px">北</p>
+                          <p class="w130px">北</p>
                           <p class="flex-grow-1 text-end text-sm-start">22.00m</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">南</p>
+                          <p class="w130px">南</p>
                           <p class="flex-grow-1 text-end text-sm-start">18.00m</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">西</p>
+                          <p class="w130px">西</p>
                           <p class="flex-grow-1 text-end text-sm-start">22.00m</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">東</p>
+                          <p class="w130px">東</p>
                           <p class="flex-grow-1 text-end text-sm-start">40.00m</p>
                         </div>
 
@@ -479,17 +479,17 @@
                       <div class="col-sm-20 mb-3 mb-sm-0"><div class="el__label">標準的画地判定</div></div>
                       <div class="col-sm-80">
                         <div class="d-flex">
-                          <p class="w120px">間口</p>
+                          <p class="w130px">間口</p>
                           <p class="flex-grow-1 text-end text-sm-start">15.30㎡</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">奥行き</p>
+                          <p class="w130px">奥行き</p>
                           <p class="flex-grow-1 text-end text-sm-start">20.00㎡</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">面積</p>
+                          <p class="w130px">面積</p>
                           <p class="flex-grow-1 text-end text-sm-start">300.00㎡</p>
                         </div>
 
@@ -524,18 +524,18 @@
                       <div class="col-sm-20 mb-3 mb-sm-0"><div class="el__label">建ぺい率</div></div>
                       <div class="col-sm-80">
                         <div class="d-flex">
-                          <p class="w120px">指定</p>
+                          <p class="w130px">指定</p>
                           <p class="flex-grow-1 text-end text-sm-start">80%</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">基準</p>
+                          <p class="w130px">基準</p>
                           <p class="flex-grow-1 text-end text-sm-start">80%</p>
                         </div>
                         <hr>
                         <div class="d-sm-flex">
-                          <p class="w280px el__label">防火地域で耐火建築・角地等・面積加重</p>
-                          <p class="flex-grow-1 el__value">-</p>
+                          <p class="w280px el__label -s2">防火地域で耐火建築・角地等・面積加重</p>
+                          <p class="flex-grow-1 el__value">ー</p>
                         </div>
                       </div>
                     </div><!-- .row -->
@@ -544,18 +544,18 @@
                       <div class="col-sm-20 mb-3 mb-sm-0"><div class="el__label">容積率</div></div>
                       <div class="col-sm-80">
                         <div class="d-flex">
-                          <p class="w120px">指定</p>
+                          <p class="w130px">指定</p>
                           <p class="flex-grow-1 text-end text-sm-start">400%</p>
                         </div>
                         <hr>
                          <div class="d-flex">
-                          <p class="w120px">基準</p>
+                          <p class="w130px">基準</p>
                           <p class="flex-grow-1 text-end text-sm-start">400%</p>
                         </div>
                         <hr>
                          <div class="d-sm-flex">
                           <p class="w280px el__label">前面道路幅員・面積加重・特定道路距離</p>
-                          <p class="flex-grow-1 el__value">-</p>
+                          <p class="flex-grow-1 el__value">ー</p>
                         </div>
                       </div>
                     </div><!-- .row -->
@@ -570,7 +570,7 @@
                     <div class="row">
                       <div class="col-sm-20"><div class="el__label mt-2">日影規制</div></div>
                       <div class="col-sm-80">
-                        <p class="el__value">—</p>
+                        <p class="el__value">ー</p>
                       </div>
                     </div><!-- .row -->
                     <hr class="d-none d-sm-block">
@@ -594,8 +594,8 @@
                         <p class="el__value">ない</p>
                         <hr class="d-none d-sm-block">
                         <div class="d-flex">
-                          <p class="w120px">名称</p>
-                          <p class="flex-grow-1 text-end text-sm-start">—</p>
+                          <p class="w130px">名称</p>
+                          <p class="flex-grow-1 text-end text-sm-start">ー</p>
                         </div>
                       </div>
                     </div><!-- .row -->
@@ -625,12 +625,12 @@
                         <p class="el__value">接続済み</p>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">受益者負担金</p>
+                          <p class="w130px">受益者負担金</p>
                           <p class="flex-grow-1 text-end text-sm-start">済み</p>
                         </div>
                         <hr>
                         <div class="d-flex">
-                          <p class="w120px">未払額</p>
+                          <p class="w130px">未払額</p>
                           <p class="flex-grow-1 text-end text-sm-start">— 円</p>
                         </div>
                       </div>
@@ -658,7 +658,7 @@
                       <div class="col-sm-20 mb-3 mb-sm-0"><div class="el__label">土壌汚染</div></div>
                       <div class="col-sm-80">
                         <div class="d-flex mb-3 mb-sm-0">
-                          <p class="w120px">業種</p>
+                          <p class="w130px">業種</p>
                           <p class="flex-grow-1 text-end text-sm-start">ー</p>
                         </div>
                       </div>
@@ -668,22 +668,22 @@
                       <div class="col-sm-20 mb-3 mb-sm-0"><div class="el__label">特定施設届出</div></div>
                       <div class="col-sm-80">
                         <div class="d-sm-flex">
-                          <p class="w280px el__label">■水質汚濁防止法・下水道法の特定施設</p>
+                          <p class="w280px el__label -s2">■水質汚濁防止法・下水道法の特定施設</p>
                           <p class="flex-grow-1 el__value">非該当</p>
                         </div>
                         <hr>
                         <div class="d-flex mb-3 mb-sm-0">
-                          <p class="w120px">物質名</p>
+                          <p class="w130px">物質名</p>
                           <p class="flex-grow-1 text-end text-sm-start">ー</p>
                         </div>
                         <hr class="d-none d-sm-block">
                         <div class="d-sm-flex">
-                          <p class="w280px el__label">■有害物質使用特定施設</p>
+                          <p class="w280px el__label -s2">■有害物質使用特定施設</p>
                           <p class="flex-grow-1 el__value">非該当</p>
                         </div>
                         <hr class="d-none d-sm-block">
                         <div class="d-flex">
-                          <p class="w120px">物質名</p>
+                          <p class="w130px">物質名</p>
                           <p class="flex-grow-1 text-end text-sm-start">ー</p>
                         </div>
                       </div>
@@ -964,7 +964,7 @@
             <a href=""><i class="icon-angle-right rotate-180"></i> 戻る</a>
           </li>
           <li class="col-6 -right">
-            <a href=""><i class="icon-plus"></i> 保存</a>
+            <a href=""><i class="icon-edit"></i> 編集する</a>
           </li>
         </ul>
       </div>
