--- a/bukken-input.html
+++ b/bukken-input.html
@@ -1551,7 +1551,7 @@
             <div class="modal-body p-0">
 
               <div class="b__map__iframe d-flex align-items-center justify-content-center">
-                <div class="text-center">
+                <div class="text-center w-100">
                   <p class="mb-4">特定したい物件の住所、もしくは近隣の住所を検索しましょう</p>
 
                   <div class="msearch">
