--- a/bukken.html
+++ b/bukken.html
@@ -84,6 +84,11 @@
           <div class="sc__box -list mb-4">
             <div class="sc__box__header -small d-flex align-items-center">
               <h4 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>登録物件一覧</h4>
+
+              <div class="d-none d-lg-block ms-4">
+                <button class="table__btn me-3"><i class="icon-edit"></i>編集</button>
+                <button class="table__btn"><i class="icon-trash"></i>削除</button>
+              </div>
             </div>
             <div class="table-wrapper">
                 <table class="table table-striped table_list -fixedHeader js-table-edit">
