--- a/user-info.html
+++ b/user-info.html
@@ -58,7 +58,7 @@
 
         <div class="sc__content -userinfo">
 
-          <div class="row">
+          <div class="row gx-xl-5">
 
             <div class="col-lg-6">
               <div class="sc__box -userinfo">
@@ -193,7 +193,7 @@
                           </tr>
                         </tbody>
                       </table>
-                      <p class="mt-4 text-center">
+                      <p class="mt-4 text-center pb-1">
                         <a href=""  class="ms-auto -text-registered"><i class="icon-list"></i> その他の支払い履歴を見る</a>
                       </p>
                     </li>
