--- a/card-pc.html
+++ b/card-pc.html
@@ -15,6 +15,9 @@
       button:not(:disabled),[type=button]:not(:disabled),[type=reset]:not(:disabled),[type=submit]:not(:disabled){cursor:pointer;}
       body{color:#666666;font-weight:500;font-size:14px;line-height:normal;position:relative;background:#F9F9F9;}
       hr{height:1px;margin:1rem 0;color:#CCCCCC;border:0;background-color:#CCCCCC;}
+      p{
+        margin: 0;
+      }
       .text-center{text-align:center!important;}
       .d-none{display:none!important;}
       .d-flex{display:flex!important;}
